Add build files

--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,4 @@ NODE_ENV=development
 # Lazada API Credentials
 LAZADA_APP_KEY=134855
 LAZADA_APP_SECRET=SswGMNWJoggmNwdy2jNkUXjOaenZiCQX
-LAZADA_API_URL=https://api.lazada.com/rest
+LAZADA_API_URL=https://renzparagas123.github.io/cll/callback
