Fix: Correct BrowserRouter basename and server redirect URIs

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ NODE_ENV=development
 LAZADA_APP_KEY=134855
 LAZADA_APP_SECRET=SswGMNWJoggmNwdy2jNkUXjOaenZiCQX
 LAZADA_API_URL=https://api.lazada.com/rest
+VITE_API_URL=https://cll-gi1p.onrender.com/api
