--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,12 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.13.2",
     "crypto": "^1.0.1",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
